Add org.jline as module to component directory